<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.boyoung.teamproject.Activity.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo"
        android:layout_marginTop="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id = "@+id/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_id"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="70dp"
        android:layout_below="@+id/logo"/>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:layout_above="@+id/editText2"
        android:layout_alignStart="@+id/editText2" />

    <TextView
        android:id = "@+id/pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/id"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:layout_alignBaseline="@+id/pw"
        android:layout_alignBottom="@+id/pw"
        android:layout_toEndOf="@+id/pw"
        android:layout_marginLeft="10dp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@+id/editText2"
        android:layout_marginTop="70dp"
        android:text="@string/login"
        android:onClick="loadMessage" />

    <TextView
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true"
        android:text="@string/signin"
        android:layout_marginTop="20dp"
        android:onClick="saveMessage"/>

</RelativeLayout>
